# EstruturaDeDados

./: CMakeLists.txt  Readme.md  exec  main.cpp
Dominio/: autor.hpp  controlador.hpp  editora.hpp  livro.hpp  revista.hpp  usuario.hpp
Funcoes/: data.h  hash.h  lista.h
Menu/: Menu.cpp  Menu.h
Utilidades/HashTable/: HashTable.cpp  HashTable.hpp
Utilidades/LinkedList/: LinkedList.cpp  LinkedList.hpp
